--- a/manualAppProject/index.html
+++ b/manualAppProject/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Gizmo-Buddy</title>
   <!-- <link href="/src/index.css" rel="stylesheet"> osäker på om den behövs stod i tailwind dokumentationen-->
 </head>
 
